Issue #1163 feat : Question bank filter collapsable

--- a/org.ekstep.metadata-1.1/editor/css/contentmetaform.css
+++ b/org.ekstep.metadata-1.1/editor/css/contentmetaform.css
@@ -183,6 +183,7 @@ form .ui.grid.form-bottom-allign{
     margin-bottom: 5%;
 }
 
-.marginBottomClass{
+.advanceFilterClass{
     margin-bottom: 1%;
+    cursor: pointer;
 }
